Fix spacing between sale toggle and the next section

--- a/packages/js/product-editor/src/blocks/schedule-sale/editor.scss
+++ b/packages/js/product-editor/src/blocks/schedule-sale/editor.scss
@@ -1,6 +1,9 @@
 .wp-block-woocommerce-product-schedule-sale-fields {
+	margin-bottom: $gap-large;
+
 	.components-toggle-control {
-		margin-bottom: $gap-large;
+		margin-bottom: $gap;
+		padding-bottom: $gap-smaller;
 	}
 
 	.components-toggle-control__label {
